# filexplorer

./: CHANGELOG.rst  Dockerfile  README.rst  pyproject.toml
.kustomization/: README.rst
.kustomization/base/: psp.yaml  rbac.yaml  sa.yaml
.kustomization/components/api/: cm.yaml  deployment.yaml  ingress.yaml
.kustomization/components/filexplorer/: ingress.yaml  kustomization.yaml  svc.yaml
.kustomization/overlays/dev/: kustomization.yaml
.kustomization/overlays/dev/configs/: base.yaml
.kustomization/overlays/dev/ingress/: api.yaml  filexplorer.yaml
.kustomization/overlays/prd/: kustomization.yaml
.kustomization/overlays/prd/configs/: base.yaml
.kustomization/overlays/prd/ingress/: api.yaml  filexplorer.yaml  kustomization.yaml
etc/: nsswitch.conf
etc/sudoers.d/: filexplorer
samples/: api.py  client.py
src/: __init__.py  app.py
src/api/: auth.py  filesystem.py
src/resources/: auth.py  filesystem.py
src/settings/: config.py  oas.py
src/utils/: __init__.py
tests/: conftest.py  test_filexplorer.py  utils.py
tests/functional/: conftest.py  test_app.py  test_filesystem.py
tests/unit/: test_filesystem.py  test_utils.py
