[tool.poetry]
name = "filexplorer"
version = "0.1.0"
description = "A RESTful API for CRUD operations over files in current filesystem."
authors = ["Renato Teixeira <rena2damas@gmail.com>"]
license = "MIT"
readme = "README.rst"
packages = [
    { include = "*", from = "src" }
]
homepage = ""
repository = "https://github.com/rena2damas/filexplorer"
documentation = ""
keywords = [
    "filexplorer",
    "swagger",
    "openapi",
    "oas3",
    "rest",
    "api",
    "web",
    "flask",
    "python",
    "python3"
]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10"
]

[tool.poetry.dependencies]
apispec = { extras = ["marshmallow", "yaml"], version = "^5.1.1" }
apispec-plugins = "^0.1.1"
environs = "^9.5.0"
flasgger = "^0.9.5"
Flask = "^2.0.3"
Flask-RESTful = "^0.3.9"
gunicorn = "^20.1.0"
python = "^3.7"
python-pam = "^1.8.4"

[tool.poetry.dev-dependencies]
coverage = "^6.3.2"
pre-commit = "^2.17.0"
pytest = "^7.1.0"
pytest-mock = "^3.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
